Fixes layout issues with Profile Widget: Map

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1200,7 +1200,6 @@ hr.line.align-right {
 }
 
 .widget.profile span {
-  display: block;
   font-family: @font-swatch5-font-family;
   font-size: @font-swatch5-font-size;
   line-height: @font-swatch5-line-height;
@@ -1208,7 +1207,6 @@ hr.line.align-right {
 }
 
 footer .widget.profile span {
-  display: block;
   font-family: @font-swatch5-font-family;
   font-size: @font-swatch5-font-size;
   line-height: @font-swatch5-line-height;
@@ -1279,6 +1277,8 @@ color: @color-swatch1;
 footer .widget.profile .twitter span {
   display: inline;
 }
+
+
 
 
 
